--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,13 +1,10 @@
 version: 2
 formats: []
 
-
 build:
-  image: latest
-
-sphinx:
-   configuration: docs/conf.py
-   fail_on_warning: false
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
 
 python:
   version: 3.11
