--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,9 +2,14 @@ version: 2
 formats: []
 
 build:
-  os: ubuntu-22.04
+  os: "ubuntu-22.04"
   tools:
     python: "3.11"
+
+sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: false
+  builder: html
 
 python:
   version: 3.11
@@ -12,3 +17,5 @@ python:
     - requirements: docs/requirements.txt
     - method: pip
       path: .
+      extra_requirements:
+        - docs
