--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Generate Documentation on Github Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -123,7 +123,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 5
-        ref: gh-pages
         path: docs/gh-pages
 
     - name: Sync docs
